# fltkhs-fluid-hello-world

./: .gitignore  cabal.project  fltkhs-fluid-hello-world.cabal  stack-repl.yaml  stack-windows.yaml  stack.yaml
src/: Callbacks.hs  HelloWorld.fl  fluid-hello-world.hs
