name : fltkhs-fluid-hello-world
version : 0.0.0.2
synopsis : Fltkhs Fluid template project
description:
    Starter kit for an FLTKHS Fluid project
license : MIT
license-file : LICENSE
author : Aditya Siram
build-type: Custom
maintainer: aditya.siram@gmail.com
homepage: http://github.com/deech/fltkhs-fluid-hello-world
category: UI,Graphics
cabal-version: >=1.20
source-repository head
  type: git
  location: http://github.com/deech/fltkhs-fluid-hello-world

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

Executable fltkhs-fluid-hello-world
  Main-Is: fluid-hello-world.hs
  Hs-Source-Dirs: src/
  Build-Depends:
    base == 4.*,
    fltkhs >= 0.4.0.0
  default-language: Haskell2010
  ghc-Options: -Werror -threaded
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  Other-Modules: HelloWorld
  if !os(darwin)
    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
