name : fltkhs-fluid-hello-world
version : 0.0.0.1
synopsis : Fltkhs Fluid template project
description:
    Starter kit for an FLTKHS Fluid project
license : MIT
license-file : LICENSE
author : Aditya Siram
build-type: Custom
maintainer: aditya.siram@gmail.com
homepage: http://github.com/deech/fltkhs-fluid-hello-world
category: UI,Graphics
cabal-version: >=2.0
extra-source-files: src/HelloWorld.fl
source-repository head
  type: git
  location: http://github.com/deech/fltkhs-fluid-hello-world

custom-setup
  setup-depends:
      Cabal >= 3.2.0.0 && < 4
    , base >=4.4
    , filepath
    , fltkhs-fluid-preprocessor >= 0.1.0.0

Executable fltkhs-fluid-hello-world
  Main-Is: fluid-hello-world.hs
  autogen-modules: HelloWorld
  Other-Modules: HelloWorld, Callbacks
  Hs-Source-Dirs: src/
  Build-Depends:
    base >= 4.14 && < 5,
    fltkhs >= 0.8.0.3,
    text >= 1.2.2.0
  build-tool-depends: fltkhs-fluidtohs:fltkhs-fluidtohs >= 0.1.0.0
  default-language: Haskell2010
